--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,8 @@
 {
-  "singleQuote": true
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
