--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "jest-environment-node": "^29.4.1",
     "nx": "17.3.2",
     "prettier": "^2.6.2",
-    "prisma": "^5.10.2",
+    "prisma": "5.8.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "5.8.1",
     "axios": "^1.6.0",
     "express": "~4.18.1",
     "tslib": "^2.3.0"
